--- a/models/yolov5_tutorial.ipynb
+++ b/models/yolov5_tutorial.ipynb
@@ -1,28 +1,5 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": [],
-      "include_colab_link": true
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "accelerator": "GPU"
-  },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/Sanmitha-Sadhishkumar/Door_number_finding_system/blob/Sanmitha/yolov5_custom_model.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
     {
       "cell_type": "markdown",
       "metadata": {
@@ -59,57 +36,123 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 4,
       "metadata": {
-        "id": "wbvMlHd_QwMG",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "wbvMlHd_QwMG",
         "outputId": "ca4885d5-d560-4462-b566-e5476bebd510"
       },
-      "source": [
-        "!git clone https://github.com/ultralytics/yolov5  # clone\n",
-        "%cd yolov5\n",
-        "%pip install -qr requirements.txt comet_ml  # install\n",
-        "\n",
-        "import torch\n",
-        "import utils\n",
-        "display = utils.notebook_init()  # checks"
-      ],
-      "execution_count": 1,
       "outputs": [
         {
+          "name": "stdout",
           "output_type": "stream",
-          "name": "stderr",
           "text": [
-            "YOLOv5 🚀 v7.0-193-g485da42 Python-3.10.12 torch-2.0.1+cu118 CUDA:0 (Tesla T4, 15102MiB)\n"
+            "[WinError 2] The system cannot find the file specified: 'yolov5'\n",
+            "e:\\git\\Door_number_finding_system\\models\n"
           ]
         },
         {
+          "name": "stderr",
           "output_type": "stream",
-          "name": "stdout",
           "text": [
-            "Setup complete ✅ (2 CPUs, 12.7 GB RAM, 24.4/78.2 GB disk)\n"
+            "fatal: Too many arguments.\n",
+            "\n",
+            "usage: git clone [<options>] [--] <repo> [<dir>]\n",
+            "\n",
+            "    -v, --verbose         be more verbose\n",
+            "    -q, --quiet           be more quiet\n",
+            "    --progress            force progress reporting\n",
+            "    --reject-shallow      don't clone shallow repository\n",
+            "    -n, --no-checkout     don't create a checkout\n",
+            "    --bare                create a bare repository\n",
+            "    --mirror              create a mirror repository (implies bare)\n",
+            "    -l, --local           to clone from a local repository\n",
+            "    --no-hardlinks        don't use local hardlinks, always copy\n",
+            "    -s, --shared          setup as shared repository\n",
+            "    --recurse-submodules[=<pathspec>]\n",
+            "                          initialize submodules in the clone\n",
+            "    --recursive ...       alias of --recurse-submodules\n",
+            "    -j, --jobs <n>        number of submodules cloned in parallel\n",
+            "    --template <template-directory>\n",
+            "                          directory from which templates will be used\n",
+            "    --reference <repo>    reference repository\n",
+            "    --reference-if-able <repo>\n",
+            "                          reference repository\n",
+            "    --dissociate          use --reference only while cloning\n",
+            "    -o, --origin <name>   use <name> instead of 'origin' to track upstream\n",
+            "    -b, --branch <branch>\n",
+            "                          checkout <branch> instead of the remote's HEAD\n",
+            "    -u, --upload-pack <path>\n",
+            "                          path to git-upload-pack on the remote\n",
+            "    --depth <depth>       create a shallow clone of that depth\n",
+            "    --shallow-since <time>\n",
+            "                          create a shallow clone since a specific time\n",
+            "    --shallow-exclude <revision>\n",
+            "                          deepen history of shallow clone, excluding rev\n",
+            "    --single-branch       clone only one branch, HEAD or --branch\n",
+            "    --no-tags             don't clone any tags, and make later fetches not to follow them\n",
+            "    --shallow-submodules  any cloned submodules will be shallow\n",
+            "    --separate-git-dir <gitdir>\n",
+            "                          separate git dir from working tree\n",
+            "    -c, --config <key=value>\n",
+            "                          set config inside the new repository\n",
+            "    --server-option <server-specific>\n",
+            "                          option to transmit\n",
+            "    -4, --ipv4            use IPv4 addresses only\n",
+            "    -6, --ipv6            use IPv6 addresses only\n",
+            "    --filter <args>       object filtering\n",
+            "    --also-filter-submodules\n",
+            "                          apply partial clone filters to submodules\n",
+            "    --remote-submodules   any cloned submodules will use their remote-tracking branch\n",
+            "    --sparse              initialize sparse-checkout file to include only files at root\n",
+            "\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "ERROR: Invalid requirement: '#'\n"
           ]
         }
+      ],
+      "source": [
+        "!git clone https://github.com/ultralytics/yolov5  # clone\n",
+        "%cd yolov5\n",
+        "!pip install -qr requirements.txt comet_ml  # install\n"
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
       "source": [
-        "!unzip -q /content/train_data.zip"
-      ],
+        "\n",
+        "import torch\n",
+        "import utils\n",
+        "display = utils.notebook_init()  # checks"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 2,
       "metadata": {
         "id": "aEbUplwkSobr"
       },
-      "execution_count": 2,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "!unzip -q /content/train_data.zip"
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [],
       "metadata": {
         "id": "qmKvPF0E5N_l"
-      }
+      },
+      "source": []
     },
     {
       "cell_type": "markdown",
@@ -135,22 +178,18 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 5,
       "metadata": {
-        "id": "zR9ZbuQCH7FX",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "zR9ZbuQCH7FX",
         "outputId": "655bc819-7527-45f6-8c94-4f4c1928f534"
       },
-      "source": [
-        "!python detect.py --weights runs/train/exp/weights/best.pt --img 640 --conf 0.25 --source /content/image.png\n",
-        "# display.Image(filename='runs/detect/exp/zidane.jpg', width=600)"
-      ],
-      "execution_count": 5,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "WARNING ⚠️ 'ultralytics.yolo.v8' is deprecated since '8.0.136' and will be removed in '8.1.0'. Please use 'ultralytics.models.yolo' instead.\n",
             "WARNING ⚠️ 'ultralytics.yolo.utils' is deprecated since '8.0.136' and will be removed in '8.1.0'. Please use 'ultralytics.utils' instead.\n",
@@ -169,6 +208,10 @@
             "Results saved to \u001b[1mruns/detect/exp2\u001b[0m\n"
           ]
         }
+      ],
+      "source": [
+        "!python detect.py --weights runs/train/exp/weights/best.pt --img 640 --conf 0.25 --source /content/image.png\n",
+        "# display.Image(filename='runs/detect/exp/zidane.jpg', width=600)"
       ]
     },
     {
@@ -193,47 +236,43 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
-        "id": "WQPtK1QYVaD_",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "WQPtK1QYVaD_",
         "outputId": "cf7d52f0-281c-4c96-a488-79f5908f8426"
       },
-      "source": [
-        "# Download COCO val\n",
-        "torch.hub.download_url_to_file('https://ultralytics.com/assets/coco2017val.zip', 'tmp.zip')  # download (780M - 5000 images)\n",
-        "!unzip -q tmp.zip -d ../datasets && rm tmp.zip  # unzip"
-      ],
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stderr",
+          "output_type": "stream",
           "text": [
             "100%|██████████| 780M/780M [00:12<00:00, 66.6MB/s]\n"
           ]
         }
+      ],
+      "source": [
+        "# Download COCO val\n",
+        "torch.hub.download_url_to_file('https://ultralytics.com/assets/coco2017val.zip', 'tmp.zip')  # download (780M - 5000 images)\n",
+        "!unzip -q tmp.zip -d ../datasets && rm tmp.zip  # unzip"
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
-        "id": "X58w8JLpMnjH",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "X58w8JLpMnjH",
         "outputId": "3e234e05-ee8b-4ad1-b1a4-f6a55d5e4f3d"
       },
-      "source": [
-        "# Validate YOLOv5s on COCO val\n",
-        "!python val.py --weights yolov5s.pt --data coco.yaml --img 640 --half"
-      ],
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "\u001b[34m\u001b[1mval: \u001b[0mdata=/content/yolov5/data/coco.yaml, weights=['yolov5s.pt'], batch_size=32, imgsz=640, conf_thres=0.001, iou_thres=0.6, max_det=300, task=val, device=, workers=8, single_cls=False, augment=False, verbose=False, save_txt=False, save_hybrid=False, save_conf=False, save_json=True, project=runs/val, name=exp, exist_ok=False, half=True, dnn=False\n",
             "YOLOv5 🚀 v7.0-136-g71244ae Python-3.9.16 torch-2.0.0+cu118 CUDA:0 (Tesla T4, 15102MiB)\n",
@@ -275,6 +314,10 @@
             "Results saved to \u001b[1mruns/val/exp\u001b[0m\n"
           ]
         }
+      ],
+      "source": [
+        "# Validate YOLOv5s on COCO val\n",
+        "!python val.py --weights yolov5s.pt --data coco.yaml --img 640 --half"
       ]
     },
     {
@@ -306,6 +349,11 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "i3oKtE4g-aNn"
+      },
+      "outputs": [],
       "source": [
         "#@title Select YOLOv5 🚀 logger {run: 'auto'}\n",
         "logger = 'Comet' #@param ['Comet', 'ClearML', 'TensorBoard']\n",
@@ -319,31 +367,22 @@
         "elif logger == 'TensorBoard':\n",
         "  %load_ext tensorboard\n",
         "  %tensorboard --logdir runs/train"
-      ],
-      "metadata": {
-        "id": "i3oKtE4g-aNn"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 3,
       "metadata": {
-        "id": "1NcFxRcFdJ_O",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "1NcFxRcFdJ_O",
         "outputId": "b00aa8e4-6972-46e7-a40d-a87a660c1c45"
       },
-      "source": [
-        "# Train YOLOv5s on COCO128 for 3 epochs\n",
-        "!python train.py --img 640 --batch 2 --epochs 20 --data custom_data.yaml --weights yolov5s.pt --cache"
-      ],
-      "execution_count": 3,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "WARNING ⚠️ 'ultralytics.yolo.v8' is deprecated since '8.0.136' and will be removed in '8.1.0'. Please use 'ultralytics.models.yolo' instead.\n",
             "WARNING ⚠️ 'ultralytics.yolo.utils' is deprecated since '8.0.136' and will be removed in '8.1.0'. Please use 'ultralytics.utils' instead.\n",
@@ -661,6 +700,10 @@
             "    comet upload /content/yolov5/.cometml-runs/bffed269852344f698b542066b85eb3e.zip\n"
           ]
         }
+      ],
+      "source": [
+        "# Train YOLOv5s on COCO128 for 3 epochs\n",
+        "!python train.py --img 640 --batch 2 --epochs 20 --data custom_data.yaml --weights yolov5s.pt --cache"
       ]
     },
     {
@@ -674,6 +717,9 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "nWOsI5wJR1o3"
+      },
       "source": [
         "## Comet Logging and Visualization 🌟 NEW\n",
         "\n",
@@ -690,13 +736,13 @@
         "\n",
         "<a href=\"https://bit.ly/yolov5-readme-comet2\">\n",
         "<img alt=\"Comet Dashboard\" src=\"https://user-images.githubusercontent.com/26833433/202851203-164e94e1-2238-46dd-91f8-de020e9d6b41.png\" width=\"1280\"/></a>"
-      ],
-      "metadata": {
-        "id": "nWOsI5wJR1o3"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "Lay2WsTjNJzP"
+      },
       "source": [
         "## ClearML Logging and Automation 🌟 NEW\n",
         "\n",
@@ -711,10 +757,7 @@
         "\n",
         "<a href=\"https://cutt.ly/yolov5-notebook-clearml\">\n",
         "<img alt=\"ClearML Experiment Management UI\" src=\"https://github.com/thepycoder/clearml_screenshots/raw/main/scalars.jpg\" width=\"1280\"/></a>"
-      ],
-      "metadata": {
-        "id": "Lay2WsTjNJzP"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -773,9 +816,11 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "GMusP4OAxFu6"
       },
+      "outputs": [],
       "source": [
         "# YOLOv5 PyTorch HUB Inference (DetectionModels only)\n",
         "import torch\n",
@@ -784,9 +829,31 @@
         "im = 'https://ultralytics.com/images/zidane.jpg'  # file, Path, PIL.Image, OpenCV, nparray, list\n",
         "results = model(im)  # inference\n",
         "results.print()  # or .show(), .save(), .crop(), .pandas(), etc."
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     }
-  ]
+  ],
+  "metadata": {
+    "accelerator": "GPU",
+    "colab": {
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.10.4"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
